fixing min input font size on mobile and adding peak to map onSave

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -13,3 +13,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+@media only screen and (max-width: 768px) {
+  input.form-control.form-control-sm {
+    font-size: 1.5rem;
+  }
+  textarea.form-control {
+    font-size: 1.5rem;
+  }
+}
